--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,6 @@
         align-items: center;
         padding: 24px 24px 63px;
         overflow: scroll;
-        /* font-family: s; */
     }
 
     .header {
@@ -76,6 +75,21 @@
         margin: 24px 0 28px;
     }
 
+    .font-family-list {
+        position: relative;
+        z-index: 2;
+        right: 70px;
+        top: 18px;
+        width: 183px;
+        height: 132px;
+        padding: 24px;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        gap: 16px;
+        border-radius: 16px;
+    }
+
     .input-div {
         width: 100%;
         height: 48px;
@@ -86,6 +100,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+        /* font-family: ; */
     }
 
     .input-div input {   
