--- a/src/index.css
+++ b/src/index.css
@@ -68,14 +68,7 @@
         align-items: center;
     }
 
-    .day-night-changer {
-        width: 40px;
-        height: 20px;
-        border-radius: 40px;
-        padding: 3px;
-    }
-
-    .day-night-changer div {
+    .ball {
         width: 14px;
         height: 14px;
         border-radius: 50%;
@@ -91,19 +84,7 @@
         margin: 24px 0 28px;
     }
 
-    .input-div {
-        width: 100%;
-        height: 48px;
-        padding: 16px 24px 15px;
-        border-radius: 15px;
-        border-width: 1px;
-        border-style: solid;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .input-div input {   
+    .input {   
         width: 100%;
         border: unset;
         outline: none;
@@ -111,7 +92,7 @@
         font-weight: 700;
     }
 
-    .input-div input::placeholder {
+    .input::placeholder {
         opacity: 0.35;
     }
 
@@ -352,14 +333,7 @@
         align-items: center;
     }
 
-    .day-night-changer {
-        width: 40px;
-        height: 20px;
-        border-radius: 40px;
-        padding: 3px;
-    }
-
-    .day-night-changer div {
+    .ball {
         width: 14px;
         height: 14px;
         border-radius: 50%;
@@ -375,21 +349,7 @@
         margin: 51px 0 50px;
     }
 
-    .input-div {
-        width: 100%;
-        height: 64px;
-        padding: 22px 24px 21px;
-        border-radius: 15px;
-        border-width: 1px;
-        border-style: solid;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 30px;
-        overflow: hidden;
-    }
-
-    .input-div input {   
+    .input {   
         width: 200%;
         border: unset;
         outline: none;
@@ -397,7 +357,7 @@
         font-weight: 700;
     }
 
-    .input-div input::placeholder {
+    .input::placeholder {
         opacity: 0.35;
     }
 
@@ -655,14 +615,7 @@
         align-items: center;
     }
   
-    .day-night-changer {
-        width: 40px;
-        height: 20px;
-        border-radius: 40px;
-        padding: 3px;
-    }
-  
-    .day-night-changer div {
+    .ball {
         width: 14px;
         height: 14px;
         border-radius: 50%;
@@ -678,21 +631,7 @@
         margin: 51px 0 50px;
     }
   
-    .input-div {
-        width: 100%;
-        height: 64px;
-        padding: 22px 24px 21px;
-        border-radius: 15px;
-        border-width: 1px;
-        border-style: solid;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 30px;
-        overflow: hidden;
-    }
-  
-    .input-div input {   
+    .input {   
         width: 200%;
         border: unset;
         outline: none;
@@ -700,7 +639,7 @@
         font-weight: 700;
     }
   
-    .input-div input::placeholder {
+    .input::placeholder {
         opacity: 0.35;
     }
   
@@ -708,6 +647,10 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+
+    .search-div:hover {
+        cursor: pointer;
     }
   
     .warning {
